--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "function-location",
   "version": "1.0.0",
-  "description": "",
+  "description": "Retrieving the function location in JavaScript.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.2"
   }
 }
