--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "ts-node": "^10.9.1"
   }
 }
