--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
     "@types/jest": "^29.5.3",
+    "babel-jest": "^29.6.4",
     "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
 }
