docs: update keywords

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "[[FunctionLocation]]",
     "function",
     "class",
-    "'path"
+    "path",
+    "location"
   ],
   "author": "",
   "license": "MIT",
