--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "function-location",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.0",
   "description": "Retrieve `[[FunctionLocation]]` from V8.",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,6 @@
   "license": "MIT",
   "homepage": "https://github.com/Nhahan/function-location",
   "dependencies": {
-    "node-addon-api": "^7.0.0",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
