--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "function-location",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0-beta.3",
   "description": "Retrieve `[[FunctionLocation]]` from V8.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "prepack": "npm run build",
     "test:build": "tsc && node dist/index.js",
-    "build": "tsc",
+    "build": "webpack --config webpack.config.cjs",
     "test": "jest"
   },
   "keywords": [
@@ -31,6 +32,10 @@
     "babel-jest": "^29.6.4",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "@types/webpack": "^5.28.1",
+    "ignore-loader": "^0.1.2",
+    "ts-loader": "^9.4.4"
   }
 }
