--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "function-location",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0",
   "description": "Retrieve `[[FunctionLocation]]` from V8.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "prepack": "npm run build",
-    "test:build": "tsc && node dist/index.js",
-    "build": "webpack --config webpack.config.cjs",
+    "build": "tsc",
     "test": "jest"
   },
   "keywords": [
@@ -26,16 +25,9 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.15",
-    "@babel/preset-env": "^7.22.15",
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.4",
     "jest": "^29.6.2",
-    "ts-jest": "^29.1.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "@types/webpack": "^5.28.1",
-    "ignore-loader": "^0.1.2",
-    "ts-loader": "^9.4.4"
+    "ts-jest": "^29.1.1"
   }
 }
